"fixed some spacing related work"

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -10,7 +10,7 @@ html {
   }
   
   section {
-    padding-top: 15rem; /* Adjust based on your header's height */
+    padding-top: 8rem; /* Adjust based on your header's height */
     margin-top: -80px; /* Negative margin to offset the added padding */
   }
   
