--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -22,8 +22,7 @@ header {
 
 /* Add padding and margin for headings, paragraphs, and lists */
 h1, h2, h3, p, ul {
-  margin-bottom: 1rem; /* Add margin below */
-  padding: 10px;
+  margin-bottom: 1rem; 
 }
 
 
